Exercício 1: Uso da função "isBlank" na validação do nome do usuário.